Bugfix portfolio layout issue introduced at the prior commit

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -688,7 +688,7 @@ img {
   }
 
   // Portfolio
-  .project {
+  .portfolio-area .project {
     width: 50%;
     font-size: 1rem;
   }
@@ -701,7 +701,7 @@ img {
 
 // Portfolio
 @media (min-width: 768px){
-  .project {
+  .portfolio-area .project {
     width: 33.33%;
     font-size: 2rem;
   }
